[package]
name = "doxyrust"
version = "0.1.0"
authors = ["Christine Caulfield <ccaulfie@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"xml-rs" = "0.8.3"
"structopt" = "0.3" 
"chrono" = "0.4.18"

[profile.release]
lto = true